# subtitler

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/subtitler_util/: __init__.py  constants.py  lang.tsv  subtitler  subtitler.py
